fix se agrego una galeria de imagenes a los servicios

--- a/resources/css/commons.css
+++ b/resources/css/commons.css
@@ -1,5 +1,10 @@
 [x-cloak] { display: none !important; }
 
+.flex-direction-nav a {
+    height: 60px !important
+}
+
+
 .btn {
     @apply px-4 py-2 rounded-full
 }
